k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lugn-trygg-frontend-service
spec:
  selector:
    app: lugn-trygg-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
